--- a/index.css
+++ b/index.css
@@ -1,1 +1,57 @@
-/* design body */
+@import url('https://fonts.cdnfonts.com/css/hellow-knight');
+
+                
+body{
+  background-color: rgb(39, 8, 8);
+  color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main{
+  display: flex;
+  flex-direction: column;
+
+}
+.account, .forget{
+  margin-top: 30px;
+  font-size: smaller;
+  color: whitesmoke;
+}
+.Login{
+  display: none;
+}
+.text{
+  margin-top: 100px;
+  font-family:sans-serif;
+}
+.details{
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  margin-top: 30px;
+}
+.details > input{
+  border-radius: 6px;
+  width: 100%;
+  box-sizing: border-box;
+  align-items: center;
+  font-size: 15px;
+  margin-bottom: 10px;
+  height: 45px;
+  
+}
+
+.button{
+  background-color: rgb(233, 217, 197);
+  border: none;
+  padding: 0px 30px;
+  border-radius: 5px;
+  cursor: pointer;
+  height: 30px;
+  font-size: 19px;
+  width: 100%;
+}
+.button:hover{
+  background-color: blanchedalmond
+}
