--- a/dashboard.css
+++ b/dashboard.css
@@ -1,49 +1,78 @@
 body{
-  background-color: black;
+  background-color: rgb(59, 58, 58);
 }
 .header{
-  background-color: antiquewhite;
+  background-color: rgb(175, 171, 171);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 95px;
+}
+
+.alldiv{
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
 }
 
 .text{
-  font-size: 30px;
+  font-size: 70px;
   text-align: left;
   gap: 90px;
+  
+}
+
+.text > span{
+  color: rgb(0, 119, 255);
 }
 
 .log-out{
   text-align: left;
   position: relative;
-  top: -40px;
-  left: 1250px;
-  font-size: 10px;
+  font-size: 13px;
   display: flex;
   flex-direction: column;
   padding: -80px;
   cursor: pointer;
+  border: none;
+  background-color: rgb(175, 171, 171);
+  margin-right: 20px;
   
 }
-.category {
-  border: none;
+.user-services {
   display: flex;
   flex-direction: column;
   width: 10%;
+  justify-content: center;
+  align-items: center;
   align-self: stretch;
   box-sizing: border-box;
   gap: 10px;
-  margin-top: 100px;
   border: none;
+  margin-left: 25px;
+  gap: 40px;
+  padding: 100px 100px;
+  
   
 }
-.category > button{
-  border-radius: 6px;
-  width: 100%;
+.user-services > button{
   box-sizing: border-box;
   align-items: center;
-  font-size: 15px;
+  font-size: 20px;
   margin-bottom: 10px;
   height: 45px;
+  width: 180px;
+  border: none;
+  background-color: rgb(59, 58, 58);
+  color: rgb(175, 171, 171);
+  cursor: pointer;
+  border-radius: 8px;
+
   
+}
+
+.user-services > button:hover{
+  background-color: rgb(49, 48, 48);
 }
 
 .balance{
@@ -55,41 +84,82 @@ body{
   flex-direction: row;
   text-align: left;
 }
+
 .update-income{
- 
-  margin-top: -300px;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
-  align-self: stretch;
-  height: 30px;
   color: white;
-  margin-bottom: 50px;  
+  margin-bottom: 50px;
+  width: 50%;  
+  align-content: center;
+  align-items: center;
+  gap: 20px;
 }
+
+#description{
+  height: 200px;
+  width: 100%;
+  font-size: 20px;
+}
+
+
 .input{
-  height: 30px;
-  width: 175px;
+  height: 40px;
   align-self: stretch;
+  font-size: 20px;
 }
+
 .add-expenses{
+  display: none;
+  flex-direction: column;
   margin-top: 30px;
   text-align: center;
   align-self: stretch;
-  height: 45px;
-  gap: 100px;
   color: white;
-  margin-bottom: 150px;
-  
-  
+  width: 50%;  
+  gap: 30px;
+  font-size: 30px;
 
 }
-.Saving{
-  margin-top: 30px;
-  text-align: center;
-  align-self: stretch;
-  height: 45px;
-  gap: 100px;
-  color: white;
-  margin-top: 100px;
 
+.update-income-button, .add-expenses-button{
+  width: 180px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 20px;
+  border: none;
+  cursor: pointer;
+  align-self: flex-end;
+}
+
+.update-income-button:hover, .add-expenses-button:hover{
+  width: 190px;
+  font-size: 25px;
+  background-color: rgb(0, 119, 255);
+}
+
+.Saving{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  margin-bottom: 50px;
+  width: 50%;  
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+
+
+
+.workspace{
+  display: flex;
+  width: 100%;
+  gap: 290px;  
 }
 
 input::-webkit-inner-spin-button,
