--- a/dashboard.css
+++ b/dashboard.css
@@ -166,3 +166,6 @@ input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button{
   -webkit-appearance: none;
 }
+.cancel, .check{
+  display: none;
+}
