--- a/index.css
+++ b/index.css
@@ -4,19 +4,38 @@
                 
 body{
   display: flex;
-  background-color: rgb(152, 190, 165);
-  color: aliceblue;
-  display: flex;
+  background-color: rgb(237, 241, 238);
+  color: rgb(82, 153, 214);
   justify-content: center;
   align-items: center;
   padding: 100px 100px;
+  background-image: url("./assest/kindpng_580815.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+}
+
+.track{
+  font-size: 90px;
+  gap: 90px;
+  margin: 0px;
+  color: rgb(68, 67, 67);
+  
+}
+
+.track > span{
+  color: rgb(0, 119, 255);
 }
 
 .page{
   display: flex;
+  flex-direction: column;
   width: 90%;
   justify-content: center;
+  align-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .main{
@@ -45,9 +64,8 @@ body{
   border-radius: 12px ;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 50%;
   justify-content: center;
-  background-color: rgb(92, 121, 102);
 }
 
 .text{
@@ -63,6 +81,7 @@ body{
   align-content: center;
   align-items: center;
 }
+
 .details > input{
   border-radius: 6px;
   width: 90%;
@@ -77,7 +96,7 @@ body{
 }
 
 .button, .login-button{
-  background-color: rgb(171, 216, 187);
+  background-color: rgb(78, 149, 211);
   border: none;
   padding: 0px 30px;
   border-radius: 8px;
@@ -88,6 +107,11 @@ body{
   font-size: 22px;
 }
 
+.account{
+  color: black;
+
+}
+
 .login-button{
   width: 40%;
   font-size: 15px;
@@ -95,7 +119,7 @@ body{
 }
 
 .button:hover, .login-button:hover{
-  background-color: rgb(147, 187, 161);
+  background-color: rgb(115, 174, 224);
   font-size: 23px;
 }
 
@@ -108,6 +132,11 @@ body{
   width: 100%;
 }
 
+.forget{
+  color: black;
+  align-self: flex-end;
+  margin: 0px;
+}
 
 
 input::-webkit-inner-spin-button,
@@ -118,13 +147,54 @@ input::-webkit-outer-spin-button{
 .cancel{
   display: flex;
   align-self: flex-end;
-  justify-self: right;
   align-content: end;
 }
 
 #cancel-login{
   background: none;
   border: none;
-  font-size: 20px;
+  font-size: 35px;
   margin-right: 10px;
+  color: red;
+}
+
+
+@media screen and (max-width: 728px) {
+
+  body{
+    padding: 40px 0px;
+  }
+  
+  .track{
+    font-size: 60px;
+  }
+
+  .details > input{
+    border-radius: 4px;
+    font-size: 10px;
+    font-size: 15px;
+    height: 35px;
+    justify-content: center;
+    
+  }
+
+  .text{
+    font-size: 20px;
+    color: rgb(88, 86, 86);
+  }
+
+  #login-segment{
+    align-self: stretch;
+    width: 100%;
+  }
+
+  .login-button{
+    width: 170px;
+    height: 30px;
+  }
+
+  .account{
+    font-size: 10px;
+  }
+
 }
